[package]
name = "accesscore"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["tracing"] }
chrono = "0.4.38"
dotenv = "0.15.0"
nanoid = "0.4.0"
redis = { version = "0.27.2", features = ["aio", "cluster-async", "tokio-comp", "connection-manager"] }
redis_pool = "0.6.0"
scylla = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "limit", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
lto = "fat"
